<resources>
    <string name="app_name">ReitoriaItinerante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_inicial">Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="topicos">
        <item>Infraestrutura</item>
        <item>Educação</item>
        <item>Alimentação</item>
        <item>Lazer</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id" translatable="false">646321649239-hn066tbcmuol0m0uko26ivs1n696n90e.apps.googleusercontent.com</string>
    <string name="preference_file_key">com.example.reitoriaitinerante.PREFERENCE_FILE_KEY</string>

        <string name="hyperlinkkaylanni"><a href="www.linkedin.com/in/maria-kaylanni-fernandes-dos-santos-321344316">
            Maria Kaylanni Fernandes Dos Santos</a></string>
        <string name="hiperlinkgabriel"><a href="www.linkedin.com/in/maria-kaylanni-fernandes-dos-santos-321344316">
            Gabriel Souza de Vasconcelos</a></string>
        <string name="hiperlinktulio"><a href="www.linkedin.com/in/maria-kaylanni-fernandes-dos-santos-321344316">
            Pedro Lucas</a></string>
        <string name="hiperlinkpedro"><a href="www.linkedin.com/in/maria-kaylanni-fernandes-dos-santos-321344316">
            Túlio Sergio</a></string>


</resources>