<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu_inicial">

    <fragment
        android:id="@+id/nav_menu_inicial"
        android:name="com.example.reitoriaitinerante.ui.menu.MenuFragment"
        android:label="@string/menu_inicial"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reitoriaitinerante.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.reitoriaitinerante.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>